<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.bbreak.excella</groupId>
  <artifactId>excella-core</artifactId>
  <version>2.1-SNAPSHOT</version>
  <name>excella-core</name>

  <properties>
    <java.version>1.8</java.version>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <inceptionYear>2009</inceptionYear>

  <licenses>
	  <license>
		  <name>Apache License, Version 2.0</name>
		  <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
	  </license>
  </licenses>

  <distributionManagement>
  	<repository>
  		<id>deploy-local</id>
  		<name>deployLocal</name>
  		<url>file://${basedir}/../excella-core.github.io/maven2</url>
  	</repository>
  </distributionManagement>
  <build>
	<pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.7.0.1746</version>
			</plugin>
		</plugins>
	</pluginManagement>
  	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.0.0-M5</version>
		</plugin>
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-javadoc-plugin</artifactId>
		  <version>3.1.1</version>
		  <configuration>
		    <source>${java.version}</source>
		    <encoding>UTF-8</encoding>
		    <charset>UTF-8</charset>
		    <docencoding>UTF-8</docencoding>
		  </configuration>
		  <executions>
		    <execution>
		      <phase>package</phase>
		      <goals>
		        <goal>javadoc</goal>
		      </goals>
		    </execution>
		  </executions>
		</plugin>
		<plugin>
		  <artifactId>maven-assembly-plugin</artifactId>
		  <version>2.5</version>
		  <configuration>
		    <descriptors>
		      <descriptor>src/assembly/bin.xml</descriptor>
		    </descriptors>
		  </configuration>
		  <executions>
		    <execution>
		      <phase>package</phase>
		      <goals>
		        <goal>single</goal>
		      </goals>
		    </execution>
		  </executions>
		</plugin>
	    <plugin>
			<artifactId>maven-jar-plugin</artifactId>
			<version>2.4</version>
			<configuration>
				<excludes>
					<exclude>org/bbreak/excella/samples/**</exclude>
				</excludes>
			</configuration>
	    </plugin>
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>license-maven-plugin</artifactId>
			<version>2.0.0</version>
			<configuration>
				<licenseName>apache_v2</licenseName>
				<organizationName>bBreak Systems and contributors</organizationName>
				<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>0.8.6</version>
			<executions>
				<execution>
					<id>prepare-agent</id>
					<goals>
						<goal>prepare-agent</goal>
						<goal>prepare-agent-integration</goal>
					</goals>
				</execution>
				<execution>
					<id>report</id>
					<goals>
						<goal>report</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
  	</plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.0.0-M5</version>
      </plugin>
    </plugins>
  </reporting>
  <dependencies>
  	<dependency>
  		<groupId>org.apache.poi</groupId>
  		<artifactId>poi</artifactId>
  		<version>4.1.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.poi</groupId>
  		<artifactId>poi-ooxml</artifactId>
  		<version>4.1.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.poi</groupId>
  		<artifactId>poi-ooxml-schemas</artifactId>
  		<version>4.1.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter</artifactId>
  		<version>5.7.0</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>commons-beanutils</groupId>
  		<artifactId>commons-beanutils</artifactId>
  		<version>1.9.4</version>
  	</dependency>
  </dependencies>
</project>
